# wayverb

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .syntastic_cpp_config  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Vagrantfile  ]  ]jk:w  bad_things.md  build.sh  cheat_sheet.md  compile_commands.json  compile_docs.sh  dependencies.txt  failing_tests.md  final_todo.md  generate_docs.sh  go.sh  kernel.gcx  kernel_2.gcx  lint.sh  list_of_submodules.md  mkxcproj.sh  newfile.cpp  orientation.md  raytrace_process.svg.bak  readme.md  run_clang_format.sh  run_clang_tidy.sh  scratch.cl  scratch.cpp  search_for.sh  serve.sh  test.sh  todo.md  wayverb.pxm  work_log.md  (+1 more)
cmd/: CMakeLists.txt  main.cpp
combined/: CMakeLists.txt  combined_config.cpp  combined_config.h  combined_config_serialize.h
combined/src/: engine.cpp  engine_gl.cpp  model.cpp
combined/tests/: CMakeLists.txt  main.cpp  wayverb_engine_test.cpp
common/: CMakeLists.txt  app_config.cpp  app_config.h  app_config_serialize.h  attenuation_configs.h  azimuth_elevation.cpp  azimuth_elevation.h  boundaries.cpp  boundaries.h  boundaries_serialize.h  bsp.cpp  bsp.h  callbacks.h  cl_common.cpp  cl_common.h  cl_include.h  cl_math.cpp  config.cpp  config.h  conversions.cpp  conversions.h  db.cpp  db.h  extended_algorithms.h  filters_common.cpp  filters_common.h  float_uint.h  geometric.cpp  geometric.h  hrtf.h  json_read_write.h  logger.cpp  logger.h  octree.cpp  octree.h  ostream_overloads.cpp  ostream_overloads.h  popcount.h  progress.cpp  progress.h  (+22 more)
common/src/: azimuth_elevation.cpp  boundaries.cpp  box.cpp  cl_common.cpp  cl_math.cpp  cl_traits.cpp  custom_program_base.cpp  dc_blocker.cpp  fast_convolution.cpp  fast_convolver.cpp  fftwf_helpers.cpp  filters_common.cpp  frequency_domain_filter.cpp  geometric.cpp  hrtf_utils.cpp  interpolation.cpp  octree.cpp  orientable.cpp  pressure_intensity.cpp  program_wrapper.cpp  progress.cpp  progress_bar.cpp  receiver_settings.cpp  reverb_time.cpp  scene_buffers.cpp  scene_data.cpp  scene_data_loader.cpp  schroeder.cpp  single_thread_access_checker.cpp  spatial_division.cpp  timed_scope.cpp  tri_cube_intersection.cpp  triangle_vec.cpp  voxel_collection.cpp  voxelised_scene_data.cpp  write_audio_file.cpp
common/tests/: CMakeLists.txt  aligned_allocator.cpp  boundary_tests.cpp  box_tests.cpp  convolution_tests.cpp  dc_blocker_tests.cpp  filters_common.cpp  frequency_domain_filter.cpp  geo_tests.cpp  gpu_geometry_tests.cpp  main.cpp  maximum_length_sequence.cpp  pressure_intensity.cpp  rect_tests.cpp  recursive_vector.cpp  reverb_time.cpp  schroeder.cpp  tri_cube_tests.cpp  voxel_tests.cpp
data/: CMakeLists.txt  convert.cpp  data.cpp  data.h  gen.sh
lib/: CMakeLists.txt  base_mesh.h  boundaries.cpp  boundaries.h  boundary_adjust.cpp  boundary_adjust.h  bvh.cpp  bvh.h  cl_structs.h  conversions.cpp  conversions.h  cpu_rect_waveguide.cpp  cpu_rect_waveguide.h  filters.cpp  filters.h  hrtf_attenuator.cpp  iterative_tetrahedral.cpp  iterative_tetrahedral.h  iterative_tetrahedral_mesh.cpp  iterative_tetrahedral_mesh.h  iterative_tetrahedral_program.cpp  iterative_tetrahedral_program.h  kernel.cpp  kernel.h  logger.cpp  logger.h  microphone.cpp  microphone.h  power_function.h  program.cpp  program.h  rectangular_mesh.cpp  rectangular_mesh.h  rectangular_program.cpp  rectangular_program.h  recursive_tetrahedral.cpp  recursive_tetrahedral.h  recursive_tetrahedral_program.cpp  recursive_tetrahedral_program.h  sample_rate_conversion.h  (+12 more)
lib/common/: CMakeLists.txt
lib/raytracer/: CMakeLists.txt
raytracer/: CMakeLists.txt  attenuation_model.h  cl_structs.h  filters.cpp  filters.h  raytracer.cpp  raytracer.h  raytracer_config.cpp  raytracer_config.h  raytracer_config_serialize.h  raytracer_program.cpp  raytracer_program.h
raytracer/src/: attenuator.cpp  attenuator_program.cpp  construct_impulse.cpp  diffuse.cpp  filters.cpp  image_source.cpp  image_source_impl.cpp  image_source_tree.cpp  postprocess.cpp  program.cpp  random_directions.cpp  raytracer.cpp  raytracer_program.cpp  reflector.cpp  results.cpp  scene_buffers.cpp
raytracer/tests/: CMakeLists.txt  brdf.cpp  diffuse_tests.cpp  histogram.cpp  image_source.cpp  image_source_impl_tests.cpp  image_source_postprocess.cpp  main.cpp  multitree.cpp  raytracer_tests.cpp  reflector_tests.cpp  sets.cpp
rayverb/: CMakeLists.txt  attenuation_model.h  cl_structs.h  clstructs.h  config.h  filters.cpp  filters.h  generic_functions.h  helpers.cpp  helpers.h  kernel.cpp  rayverb.cpp  rayverb.h  rayverb_config.cpp  rayverb_config.h  rayverb_program.cpp  rayverb_program.h
submodules/: CMakeLists.txt  go.sh  notes.md
tests/: CMakeLists.txt  aligned_allocator.cpp  assignment.cpp  boundary_tests.cpp  cereal.cpp  convolution_tests.cpp  cpu_rect_waveguide_tests.cpp  dc_blocker_tests.cpp  extended_algorithms.cpp  extended_algorithms_tests.cpp  geo_tests.cpp  gpu_geometry_tests.cpp  helper.h  image_source_impl_tests.cpp  indexing_tests.cpp  jk.cpp  main.cpp  mesh_setup_tests.cpp  mesh_tests.cpp  octree_tests.cpp  pinv.cpp  raytrace_tests.cpp  raytracer_tests.cpp  rect_tests.h  rectangular_kernel.cpp  rectangular_mesh.cpp  reflector_tests.cpp  sample_rate_tests.cpp  tri_cube_c.h  tri_cube_tests.cpp  triangle_square_intersection_tests.cpp  vec.cpp  vec_tests.cpp  verify_compensation_signal.cpp  voxel_tests.cpp  waveguide_init.cpp  waveguide_tests.cpp  wayverb_engine_test.cpp
tetrahedral/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
waveguide/: CMakeLists.txt  attenuator.cpp  attenuator.h  base_mesh.h  boundary_adjust.cpp  boundary_adjust.h  cl_structs.h  cpu_rect_waveguide.cpp  hrtf_attenuator.cpp  hrtf_attenuator.h  iterative_tetrahedral_mesh.cpp  iterative_tetrahedral_mesh.h  microphone.cpp  microphone.h  power_function.cpp  power_function.h  rectangular_mesh.cpp  rectangular_mesh.h  rectangular_program.cpp  rectangular_program.h  testing_notches.h  tetrahedral_mesh.cpp  tetrahedral_mesh.h  tetrahedral_program.h  waveguide.cpp  waveguide.h  waveguide_config.cpp  waveguide_config.h  waveguide_config_serialize.h
(+4368 files in other folders)
